--- a/RPG Editor/RPG Editor.csproj
+++ b/RPG Editor/RPG Editor.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Character\Stat.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
